.btnApply:hover fix bg on Mobile

--- a/frontend/components/Filters/Filters.module.css
+++ b/frontend/components/Filters/Filters.module.css
@@ -65,7 +65,7 @@
 }
 
 .btnApply:hover {
-    background: #e64949;
+    background: #e17a7a;
     cursor: pointer;
 }
 
